# ChangeLog for dev-ruby/geocoder
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*geocoder-1.1.3 (28 Aug 2012)

  28 Aug 2012; Hans de Graaff <graaff@gentoo.org> +geocoder-1.1.3.ebuild,
  +metadata.xml:
  Initial import for testing.
