@@ -2,10 +2,11 @@
 Hash: SHA256
 
 DIST geocoder-1.1.3.gem 50688 SHA256 60df4afb8ca804e6f0d29a8388cc36e751940ac02502767eb239558559ab9cd0 SHA512 079da59f3e34d670d2a12aba63c5cb74d5442104a8773c78736fcccaa6181e735fe5ac4cf2f9ae71232be2a71f69422d055d1f0a2692bf9991eca409332accde WHIRLPOOL dddf05b706978ec19a1c787beca839a3204a3f6ccaa2af38aa113e1b2e9f75011dcdc7ea4e6ef5c610ce77961beec1ff9d665785aa27d70d26aae3d36d69fd5f
+DIST geocoder-1.1.4.gem 53760 SHA256 4589a5badfff71632ce9b23db84fbd5cd49f88a5f81db497bd71fd333d00791d SHA512 ec1c5ede1a9ad4827b37639a4395962ffc96282ebd4e174aac692141e8a47ba286acad1fa1192ae2de1c8310508d981b8dd67f671d08665a2320178deb8ea962 WHIRLPOOL ac11c25c9a2a18d3fe295cbdedbcc6c421039bf8cae942aae453b17fa225726d39cea05f6d8c43276b4e00295aeec031d0355457bea6dd46221b5386b1050892
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlA80Z8ACgkQiIP6VqMIqNcznAD/QCOH6ZJgo63agAE2LtfPhEua
-lEn1GojuEH035BaALIEA/j+oYDsGN4mshy69qLyTGYSU96dlMWjglGfmp0rZjn04
-=M6rw
+iF4EAREIAAYFAlBuhm8ACgkQiIP6VqMIqNd2/gD+NfKQiofZFTK8qIZOqGWuUyg0
+M+MqJYUy0nysml79kGoA/3yY7lvx9Ur5lk1512rknkk0I59tPN4F6pnRLlwxeBmQ
+=f+1V
 -----END PGP SIGNATURE-----
